refactor:LMS-88 add optional holiday validations in UserService